# agentcairn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  plugin.yml  release.yml  site.yml  trivy.yml
benchmarks/: README.md  manifest.toml
benchmarks/cairn_bench/: ablation.py  build.py  config.py  download.py  latency.py  models.py  report.py  run.py  token_savings.py  vaultize.py
benchmarks/tests/: conftest.py  test_adapters.py  test_download.py  test_latency.py  test_locomo_denominator.py  test_metrics.py  test_qa.py  test_synthetic.py  test_token_savings.py
docs/plans/: 2026-06-08-01-scaffold-and-vault.md  2026-06-08-04-ingest.md  2026-06-09-07-reranker-on.md  2026-06-09-08-ollama-embedder.md  2026-06-09-09-bitemporal-validity.md  2026-06-12-config-file.md  2026-06-12-redaction-pass-order.md  2026-06-13-antecedent-resolution.md  2026-06-13-memory-consolidation.md  2026-06-13-multi-harness-ingest.md  2026-06-14-antigravity-plugin.md  2026-06-15-cursor-skill.md  2026-06-15-obsidian-plugin-mvp.md  2026-06-15-provenance-aware-recall.md  2026-06-16-compaction-summary-capture.md  2026-06-16-website-seo-phase2.md  2026-06-17-capture-quality.md  2026-06-17-vault-scoped-index.md  2026-06-18-plugin-vault-scoped-completion.md  2026-06-19-recall-eval-harness.md  2026-06-20-cairn-schedule.md  2026-06-21-cloud-embedding-tier.md  2026-06-21-hermes-memory-provider.md  2026-06-29-auto-recall-userpromptsubmit.md
docs/specs/: 2026-06-09-benchmark-harness-design.md  2026-06-09-ollama-embedder-design.md  2026-06-09-reranker-on-design.md  2026-06-10-agentcairn-claude-code-plugin-design.md  2026-06-11-redaction-overfiring-design.md  2026-06-11-structural-ingestion-design.md  2026-06-12-config-file-design.md  2026-06-12-layer-b-semantic-judge-design.md  2026-06-13-antecedent-resolution-design.md  2026-06-13-codex-plugin-design.md  2026-06-13-memory-consolidation-design.md  2026-06-13-multi-harness-ingest-design.md  2026-06-14-antigravity-ingest-design.md  (+17 more)
plugin/: .mcp.codex.json  mcp_config.json  plugin.json
scripts/: eval_consolidate.py
src/cairn/: cli.py  (+9 more)
tests/: conftest.py  test_cli.py  test_config.py  test_config_auto_recall.py  test_eval_consolidate.py  test_hook_scripts.py  test_hosts.py  test_locking.py  test_paths.py  test_plugin_assets.py  test_plugins.py  test_recall_hook.py  test_recall_hook_cli.py  test_schedule.py  test_skill_distribution.py  test_storage.py  test_temporal.py  test_usage.py  test_usage_isolation.py
website/: README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  wrangler.jsonc
(+153 files in other folders)
