[project]
name = "agentcairn"
version = "0.0.1"
description = "Local-first agent memory: an Obsidian markdown vault as source of truth, with a rebuildable DuckDB index."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Charles C. Figueiredo", email = "ccf@ccf.io" }]
dependencies = [
    "typer>=0.12",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
]

[project.scripts]
cairn = "cairn.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
