[project]
name = "agentcairn"
dynamic = ["version"]
description = "Local-first agent memory: an Obsidian markdown vault as source of truth, with a rebuildable DuckDB index."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Charles C. Figueiredo", email = "ccf@ccf.io" }]
keywords = ["agent-memory", "mcp", "obsidian", "duckdb", "rag", "local-first", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "fastembed>=0.4",
    "duckdb>=1.1",
    "mcp>=1.26.0",
    "tomlkit>=0.15.0",
]

[project.scripts]
cairn = "cairn.cli:app"
agentcairn = "cairn.mcp.server:main"

[project.urls]
Homepage = "https://agentcairn.dev"
Repository = "https://github.com/ccf/agentcairn"
Documentation = "https://github.com/ccf/agentcairn#readme"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.8"]
bench = ["anthropic>=0.40", "huggingface-hub>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cairn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.pytest.ini_options]
pythonpath = ["src", ".", "benchmarks"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer.Argument/typer.Option in default positions is the intended Typer API pattern.
ignore = ["B008"]
